--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Navbar -->
 
-        <div class="md:flex-col flex sticky top-0 justify-between items-center bg-mycreme px-[5em] py-[1.5em]">
+        <div class="md:static md:flex-col flex sticky top-0 justify-between items-center bg-mycreme px-[5em] py-[1.5em]">
 
             <div class="md:flex-col flex justify-center items-center">
                 <img class="h-[2.5em] mr-[2em]" src="./images/Shopify_logo.svg" alt="">
